--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
         <a href="./works.html">How It Works</a>
         <a href="./implement.html">Implementation</a>
         <a href="./sources.html">Sources</a>
+        
+        <p class = "foot"><i>Created by: <br> Trent Farley <br> 
+        Contact: <br> (201) 867-5309 <br>Boring, Oregon</i></p>
     </span>
       
       <span id="main">
