--- a/public/sources.html
+++ b/public/sources.html
@@ -11,13 +11,13 @@
 
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&#9776;</a>
-                                                                        <!-- times -->
+                                                                        
         <a href="./index.html">Home</a>
         <a href="./works.html">How It Works</a>
         <a href="./implement.html">Implementation</a>
         <a href="./sources.html">Sources</a>
         <p class = "foot"><i>Created by: <br> Trent Farley <br> 
-          Contact: <br> (201) 867-5309 <br>Boring, Oregon</i></p>
+          Contact: <br> (201) 867-5309 <br>Albany, Oregon</i></p>
       </div>
       
       <div id="main">
@@ -31,6 +31,7 @@
             Bradeshia, H. “Neural Networks in Materials Science.” ISIJ International, 10th ed., vol. 39, pp. 966–979.
         </p>
         <p class="source">Cirespan, Dan C, et al. “Image Classification Using Fast Learning Convolutional Neural Networks.” 2015, doi:10.14257/astl.2015.113.11.</p>
+        <p class="source"> CrashCourse, director. Machine Learning amp; Artificial Intelligence: Crash Course Computer Science #34. YouTube, PBS, 1 Nov. 2017, www.youtube.com/watch?v=z-EtmaFJieY.</p>
         <p class="source">Graves, Alex, and Jurgen Schmidhuber Schmidhuber. “Offline Handwriting Recognition with Multidimensional Recurrent Neural Networks.” 2012, doi:10.1007/978-1-4471-4072-6_12.</p>
         <p class="source">Ji, Zhengping, et al. “Where-What Network 1: ‘Where’ and ‘What’ Assist Each Other Through Top-down Connections.” 2008 7th IEEE International Conference on Development and Learning, 2008, doi:10.1109/devlrn.2008.4640806.</p>
         <p class="source">Neural Matching. Web, 25 Sept. 2018.</p>
