--- a/public/implement.html
+++ b/public/implement.html
@@ -16,7 +16,7 @@
         <a href="./implement.html">Implementation</a>
         <a href="./sources.html">Sources</a>
         <p class = "foot"><i>Created by: <br> Trent Farley <br> 
-          Contact: <br> (201) 867-5309 <br>Boring, Oregon</i></p>
+          Contact: <br> (201) 867-5309 <br>AlbanyS, Oregon</i></p>
       </div>
       <div id="main">
         <button class="openbtn" onclick="openNav()" >&#9776; </button>
