--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,9 @@
     <h1>
       Neural Networks
     </h1>
+    <div class="aid">
     <p class="arrow"><i>Press the button on the upper left to go to different topics </i></p>
+    </div>
     <img src="https://dv-website.s3.amazonaws.com/uploads/2018/05/kf_ann_052418.png" alt="Neural Network" width="100%" height="300">
     <br>
     
@@ -53,10 +55,11 @@
     </h3>
     <p>
       To put it simply, neural network is a way of processing information to become 
-      summarized into something that is understandable. A neural network is also
-      called machine learning or artificial intelligence. A network is how a machine 
-      learns, which is a combination of evolution and trial and error. Here is a 
-      video from PBS that goes into more detail:
+      summarized into something that is understandable. A network is how a machine 
+      learns, which is a combination of evolution and trial and error. To start one,
+      the programmer creates a solution and if the smaller parts or "Nodes". To learn more 
+      about the Implementation, check out the Implementation page.  Here is a 
+      video from PBS that goes into more detail about an overview of a network:
     </p>
     <iframe width="100%" height="340" src="https://www.youtube.com/embed/z-EtmaFJieY" frameborder="0" 
     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
