--- a/public/works.html
+++ b/public/works.html
@@ -26,7 +26,16 @@
       <script src="javascripts/flex.js"></script>
     <body>
         <h1>How It Works</h1>
-        
+        <img src="/images/network.png" alt="network" width="100%" height="300">
+        <h3><b>The Technical Details Simplified</b></b></h3>
+        <p>
+
+          As shown above, the evolution of a network starts with a 
+          base amount of nodes (dots, compared to individuals working on a problem).
+          If the goal is completed, the node gets passed to the next generation.
+          To solve a problem, there amy be hundreds of generations but this photo 
+          just shows a few. 
+        </p>
         <h3><b>Introduction</b></h3>
         <p>
             It all starts with the data. The amount of information that the internet 
@@ -87,16 +96,6 @@
             nothing is recognized. Handwriting researchers have trained networks to recognize 
             handwriting from photos. Look at the sources page for more information on this. 
             </p>
-            <img src="/images/network.png" alt="network" width="100%" height="300">
-            <h3><b>The Technical Details Simplified</b></b></h3>
-            <p>
 
-              As shown above, the evolution of a network starts with a 
-              base amount of nodes. If the goal is completed, the node
-              gets passed to the next generation. Once the network is trained,
-              it can be used for many years, or until it is no longer fast enough.
-              Each generation could have billions of nodes, but for simplicity,
-              this picture just shows generations of two or three nodes. 
-            </p>
 </body>
 </html>
