--- a/public/works.html
+++ b/public/works.html
@@ -33,7 +33,7 @@
           As shown above, the evolution of a network starts with a 
           base amount of nodes (dots, compared to individuals working on a problem).
           If the goal is completed, the node gets passed to the next generation.
-          To solve a problem, there amy be hundreds of generations but this photo 
+          To solve a problem, there may be hundreds of generations but this photo 
           just shows a few. 
         </p>
         <h3><b>Introduction</b></h3>
