Couple of spelling errors, fixed now

--- a/public/implement.html
+++ b/public/implement.html
@@ -25,8 +25,8 @@
     <h1>Implementation</h1>
     <p>
       The amount of information on the implementation of machine networks is staggering.
-      From material science to recognizing handwriting, the amount of increasing
-      data that can be processed is staggering. To implement something as 
+      From material science to handwriting, all of this data is being used to widen 
+      the scope of tasks that computers can accomplish. To implement something as 
       researched as this, there has to be a bit of calculus and higher level
       math. Both of these areas (Material science and image recognition) are researched
       heavily and are linked under the sources page. 
