Finished the sentence about nodes

--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,10 @@
       To put it simply, neural network is a way of processing information to become 
       summarized into something that is understandable. A network is how a machine 
       learns, which is a combination of evolution and trial and error. To start one,
-      the programmer creates a solution and if the smaller parts or "Nodes". To learn more 
-      about the Implementation, check out the Implementation page.  Here is a 
+      the programmer creates a solution and if the smaller parts or "Nodes" get close to the 
+      goal, they are passed to the next generation. The knowledge gained from one generation
+      is passed on to the next. To learn more 
+      about the implementation, check out the implementation page.  Here is a 
       video from PBS that goes into more detail about an overview of a network:
     </p>
     <iframe width="100%" height="340" src="https://www.youtube.com/embed/z-EtmaFJieY" frameborder="0" 
